TEXTAREA element: Updating child nodes without updating textContent should do nothing

https://html.spec.whatwg.org/multipage/forms.html#the-textarea-element:textcontent
> When the textarea element's textContent IDL attribute changes value, if the
> element's dirty value flag is false, then the element's raw value must be set
> to the value of the element's textContent IDL attribute.

We should do nothing if textContent isn't changed. New behavior matches to Edge,
Safari, and the standard, and doesn't match to Firefox.

BUG=698647

Review-Url: https://codereview.chromium.org/2733783003
Cr-Commit-Position: refs/heads/master@{#454840}

Former-commit-id: 5cd3e773b0851d6e56bc2bcb46802c637c50b837